k8s/app-service.yml
apiVersion: v1
kind: Service

metadata:
  name: chats-app-service
  namespace: chat-app

spec:
  type: ClusterIP

  selector:
    app: chats-app

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
