k8s/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: chats-ingress
  namespace: chat-app

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chats-app-service
                port:
                  number: 8080
